tests/ui/common/observe_invalid_mode.stderr
error: unsupported interception mode for `invalid_mode`; expected `Off`, `FirstHit`, or `EveryHit`
 --> tests/ui/common/observe_invalid_mode.rs:3:17
  |
3 | #[hook::observe(Sometimes)]
  |                 ^^^^^^^^^
